--- a/training_notebook.ipynb
+++ b/training_notebook.ipynb
@@ -29,9 +29,9 @@
     "from tqdm import tqdm\n",
     "\n",
     "# Log into W&B and HF \n",
-    "os.environ[\"WANDB_API_KEY\"]='57ae32f3ba3cd4a369ec2340fe535fc4ca75e1a7'\n",
+    "os.environ[\"WANDB_API_KEY\"]='' # Insert your own\n",
     "wandb.login()\n",
-    "hgf.login('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')\n",
+    "hgf.login() # Insert your own\n",
     "# !wandb login\n",
     "\n",
     "# Initialize device \n",
